--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,44 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,600;1,300&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: "Inter", sans-serif;
+  overflow-x: hidden;
+}
+
+.bg-primary {
+  background: rgb(248, 248, 248);
+  background: linear-gradient(
+    90deg,
+    rgba(248, 248, 248, 1) 20%,
+    rgba(255, 235, 227, 1) 100%
+  );
+}
+.cart-bg-primary {
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 1) 30%,
+    rgba(255, 249, 238, 1) 100%
+  );
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-track {
+  background-color: #e4e4e4;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #f6abab;
+  border-radius: 10px;
+}
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+}
